--- a/css/uonsite.css
+++ b/css/uonsite.css
@@ -1,137 +1,79 @@
-body{
-  font-family: 'Roboto', sans-serif;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
 }
 
-header {
-    text-align: center;
-    color: #fff;
-    background-attachment: scroll;
-    /*background-image: url(../img/header-bg.jpg);*/
-    background-position: center center;
-    background-repeat: none;
+/* Header */
+
+.header {
+    display: none;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(../img/Hola.gif) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
 }
 
-header .intro-text {
-    padding-bottom: 50px;
-    padding-top: 100px;
-    width: 98%;
-    top: 0;
-    position: absolute;
-    z-index: 2;
-    color: rgba(199, 223, 207, 0.62);
+.titel{
+	margin-top: 25%;
 }
 
-header .intro-text .intro-lead-in {
-    margin-bottom: 25px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    font-style: italic;
-    line-height: 22px;
+.titel2{
+	display: none;
+	margin: auto;
+}
+#h2{
+	color: rgba(251, 218, 0, 0.4);
+	font-weight: 300;
+	font-size: 50px;
+	text-shadow:3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
-header .intro-text .intro-heading {
-    margin-bottom: 25px;
-    text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 50px;
+.titel1{
+	display: none;
+	margin: auto;	
+}
+
+#h1{
+	font-size: 120px;
+	color: rgba(251, 218, 0, 0.4);
+	font-weight: 700;
+	text-shadow:3px 3px 4px rgba(0, 0, 0, 0.5);
+}
+
+@media(max-width:480px) {
+    #h2 { font-size: 35px;}
+    #h1 { font-size: 80px;}
+    .titel{ margin-top: 70%;}
+}
+
+.more{
+	margin-top: 1%;
+}
+
+.btn-dark {
+	display: none;
+    border-radius: 0;
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+	-moz-box-shadow: 3px 3px 6px #000000;
+	-webkit-box-shadow: 3px 3px 6px #000000;
+	box-shadow: 3px 3px 6px #000000;
+}
+
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active {
+    color: #fff;
+    background-color: #fff;
 }
 
 
-@media(min-width:768px) {
-    header .intro-text {
-        padding-top: 350px;
-        padding-bottom: 100px;
-    }
 
-    header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 40px;
-        font-style: italic;
-        line-height: 40px;
-    }
 
-    header .intro-text .intro-heading {
-        margin-bottom: 50px;
-        text-transform: uppercase;
-        font-family: 'Roboto', sans-serif;
-        font-size: 75px;
-        font-weight: 700;
-        line-height: 75px;
-    }
-}
-
-@media(max-width:500px) {
-    header .intro-text {
-        padding-top: 210px;
-        /*padding-bottom: 100px;*/
-    }
-
-    header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 30px;
-        font-style: italic;
-        line-height: 20px;
-    }
-
-    header .intro-text .intro-heading {
-        margin-bottom: 50px;
-        text-transform: uppercase;
-        font-family: 'Roboto', sans-serif;
-        font-size: 45px;
-        font-weight: 700;
-        line-height: 35px;
-    }
-}
-
-ul{
-  z-index: 0;
-}
-
-.rslides {
-  position: relative;
-  list-style: none;
-  overflow: hidden;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  }
-
-.rslides li {
-  position: absolute;
-  display: none;
-  width: 100%;
-  left: 0;
-  top: 0;
-  }
-
-.rslides li:first-child {
-  position: relative;
-  display: block;
-  float: left;
-  }
-
-.rslides img {
-  display: block;
-  height: auto;
-  float: left;
-  width: 100%;
-  border: 0;
-  }
-  
-.gallerycon{
-    position: absolute;
-    top:30%;
-    right:30%;
-    text-align: center;
-    z-index: 3;
-    width:100%;
-    height:250px;
-} 
