--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -1,11 +1,68 @@
 @import "mixins"
+@import 'https://fonts.googleapis.com/css?family=Dosis|Righteous'
 
 body, html
   height: 100%
+  background-color: black
 
 .banner
   background: url('../img/iqaGK5at6JBfL.gif') no-repeat center center
   background-size: cover
   height: 100%
-  color: white
-  padding: 10%
+  opacity: 0
+  +transition(opacity 4s ease-in-out)
+  &.visible
+    opacity: 1
+  h1
+    font-size: 120px
+    color: rgba(255, 255, 255, 0.5)
+    margin-top: 15%
+    font-family: 'Righteous', cursive
+    opacity: 0
+    +transition(opacity 2s ease-in-out 1s)
+    @media screen and (max-width:768px)
+      font-size: 100px
+    @media screen and (max-width:480px)
+      font-size: 70px
+      margin-top: 35%
+    &.visible
+      opacity: 1
+  h2
+    color: white
+    font-size: 35px
+    color: #81540f
+    margin-top: 22%
+    font-family: 'Dosis', sans-serif
+    opacity: 0
+    +transition(opacity 2s ease-in-out 2s)
+    @media screen and (max-width:768px)
+      font-size: 25px
+    @media screen and (max-width:480px)
+      font-size: 20px
+      margin-top: 35%
+    &.visible
+      opacity: 1
+    a
+      color: #81540f
+      +transition(all .3s ease-in-out)
+      &:hover
+        color: rgba(255, 255, 255, 0.4)
+        text-decoration: none
+  ul
+    margin-top: 1%
+    padding-left: 0
+    li
+      display: inline-block
+      list-style-type: none
+      margin: 0 30px
+      @media screen and (max-width:480px)
+        margin: 0 5px
+      a
+        color: rgba(255, 255, 255, 0.4)
+        font-size: 45px
+        +transition(all .3s ease-in-out)
+        @media screen and (max-width:480px)
+          font-size: 35px
+        &:hover
+          color: #81540f
+          text-decoration: none
