--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,10 +26,11 @@ body, html {
     transition: opacity 2s ease-in-out 1s; }
     @media screen and (max-width: 768px) {
       .banner h1 {
-        font-size: 100px; } }
+        font-size: 65px;
+        margin-top: 30%; } }
     @media screen and (max-width: 480px) {
       .banner h1 {
-        font-size: 70px;
+        font-size: 40px;
         margin-top: 35%; } }
     @media screen and (min-width: 768px) {
       .banner h1 {
@@ -40,16 +41,18 @@ body, html {
     @media screen and (min-width: 1200px) {
       .banner h1 {
         font-size: 120px; } }
-    .banner h1 ul.title li {
-      display: inline-block;
-      list-style-type: none;
-      margin: 0;
-      opacity: 0; }
+    .banner h1 ul.title {
+      padding: 0; }
+      .banner h1 ul.title li {
+        display: inline-block;
+        list-style-type: none;
+        margin: 0;
+        opacity: 0; }
   .banner h2 {
     color: white;
     font-size: 35px;
     color: #81540f;
-    margin-top: 22%;
+    margin-top: 25%;
     font-family: "Dosis", sans-serif;
     opacity: 0;
     -webkit-transition: opacity 2s ease-in-out 2s;
@@ -59,11 +62,12 @@ body, html {
     transition: opacity 2s ease-in-out 2s; }
     @media screen and (max-width: 768px) {
       .banner h2 {
-        font-size: 25px; } }
+        font-size: 25px;
+        margin-top: 40%; } }
     @media screen and (max-width: 480px) {
       .banner h2 {
         font-size: 20px;
-        margin-top: 35%; } }
+        margin-top: 55%; } }
     .banner h2.visible {
       opacity: 1; }
     .banner h2 a {
