--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -19,9 +19,10 @@ body, html
     font-family: 'Righteous', cursive
     +transition(opacity 2s ease-in-out 1s)
     @media screen and (max-width:768px)
-      font-size: 100px
+      font-size: 65px
+      margin-top: 30%
     @media screen and (max-width:480px)
-      font-size: 70px
+      font-size: 40px
       margin-top: 35%
     @media screen and (min-width:768px)
       font-size: 80px
@@ -30,6 +31,7 @@ body, html
     @media screen and (min-width:1200px)
       font-size: 120px
     ul.title
+      padding: 0
       li
         display: inline-block
         list-style-type: none
@@ -39,15 +41,16 @@ body, html
     color: white
     font-size: 35px
     color: #81540f
-    margin-top: 22%
+    margin-top: 25%
     font-family: 'Dosis', sans-serif
     opacity: 0
     +transition(opacity 2s ease-in-out 2s)
     @media screen and (max-width:768px)
       font-size: 25px
+      margin-top: 40%
     @media screen and (max-width:480px)
       font-size: 20px
-      margin-top: 35%
+      margin-top: 55%
     &.visible
       opacity: 1
     a
